--- a/css/styles.css
+++ b/css/styles.css
@@ -752,31 +752,30 @@ main {
     .card {
         height: 475px;
         /* Allow card height to adjust dynamically for smaller screens */
-        width: 90%;
+        width: 100%;
         /* Make the width flexible to fit the viewport */
         margin: auto; /* Center the card horizontally */
     }
-
-    .custom-prev,
-    .custom-next {
-        top: 50%;
-        transform: translateY(-50%);
-        /* Ensure the arrows are vertically centered */
+    /* Adjust arrow size for smaller screens */
+    .custom-prev img,
+    .custom-next img {
+        width: 20px;
+        height: 20px;
     }
 }
 
 @media (max-width: 576px) {
     .card {
         height: 525px; /* Allow the card to adjust its height */
-        width: 90%;
+        width: 100%;
         /* Make the card take almost the full width of smaller screens */
     }
 
     /* Adjust arrow size for smaller screens */
     .custom-prev img,
     .custom-next img {
-        width: 25px;
-        height: 25px;
+        width: 20px;
+        height: 20px;
     }
 }
 /* End of Projects Section */
