--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,18 @@ main {
     padding: 0px;
 }
 
+/* General Animation Styles for Scroll Effects */
+.scroll-element {
+    opacity: 0;
+    transform: translateY(150px); /* Start a bit lower */
+    transition: opacity 1s ease-out, transform 1s ease-out;
+}
+
+.scroll-element.in-view {
+    opacity: 1;
+    transform: translateY(0);
+}
+/* End of Animation Styles for Scroll Effects*/
 
 /* Parallax Separator */
 .parallax-separator {
@@ -33,6 +45,7 @@ main {
     background-color: rgba(0, 0, 0, 0.4); /* Add a dark overlay (adjust opacity as needed) */
     z-index: 2;
 }
+/* End of Parallax Separator */
 
 /* Line Between Sections */
 .section-divider {
@@ -46,6 +59,7 @@ main {
     /* Center the line with spacing */
     border: none;
 }
+/* End of Line Between Sections */
 
 /* Navbar Styling */
 .custom-navbar {
@@ -234,10 +248,6 @@ main {
         padding: 10px 0;
     }
 }
-
-/* End of navbar Styling */
-
-
 /* Modal Styling */
 .modal-content {
     background-color: #ffffff;
@@ -362,6 +372,7 @@ main {
 }
 
 /* End of Modal Styling */
+/* End of navbar Styling */
 
 /* General Hero Section */
 #hero {
@@ -552,7 +563,6 @@ main {
     margin: 0;
     /* Remove auto-centering */
 }
-
 /* End of About Me Section */
 
 /* Skills Section */
@@ -730,8 +740,6 @@ main {
     color: orange;
     font-weight: bold;
   }
-  
-
 /* End of Education Section */
 
 /* Start of Projects Section */
