Changed the white colour of the theme of the site to match the grey background

--- a/css/contactMe.css
+++ b/css/contactMe.css
@@ -54,7 +54,7 @@
 }
 /* Modal Styling */
 .modal-content {
-    background-color: #ffffff;
+    background-color: #DCDCDC;
     /* Dark background to match hero section */
     color: #ffffff;
     /* Light text for readability */
