--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     /* Default font family */
     line-height: 1.6;
+    background-color: #FFF5EE;
 }
 
 main {
