--- a/css/navbar.css
+++ b/css/navbar.css
@@ -6,7 +6,7 @@
 
 .navbarMain{
     background: #2C2C2C;
-    color: #fff;
+    color: #DCDCDC;
     padding: 10px 0;
 }
 
@@ -31,34 +31,34 @@ button.siteLink {
 }
 
 .whiteLink {
-    background: #fff;
+    background: #DCDCDC;
 }
 
 .whiteLink:active {
     background: #000;
-    color: #fff;
+    color: #DCDCDC;
 }
 
 .blackLink {
-    color: #fff;
+    color: #DCDCDC;
     background: #2C2C2C;
     transition: all 300ms linear;
 }
 
 .blackLink:active {
     color: #000;
-    background: #fff;
+    background: #DCDCDC;
 }
 
 #menuDrawer {
-    background: #fff;
+    background: #DCDCDC;
     position: fixed;
     height: 100vh;
     overflow: auto;
     z-index: 12312;
     top: 0;
     left: 0;
-    border-right: 1px solid #eaeaea;
+    border-right: 1px solid #000000;
     min-width: 25%;
     max-width: 320px;
     width: 100%;
@@ -68,7 +68,7 @@ button.siteLink {
 
 #mainNavigation {
     transition: transform 200ms linear;
-    background: #fff;
+    background: #DCDCDC;
     position: sticky;
     top: 0;
     width: 100%;
@@ -98,7 +98,7 @@ a.nav-menu-item {
     display: block;
     padding: 18px;
     padding-left: 32px;
-    border-bottom: 1px solid #eaeaea;
+    border-bottom: 1px solid #000000;
     font-weight: bold;
     color: #343434;
 }
