--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -5,7 +5,7 @@
     align-items: center;
     background-color: #2C2C2C;
     color: #f5f5f5;
-    padding: 85px 20px;
+    padding: 75px 20px 75px 0;
     text-align: center; /* Center-aligned for mobile */
 }
 
